--- a/youtube_clone/pubspec.yaml
+++ b/youtube_clone/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   timeago: ^3.2.2
+  video_player: ^2.4.4
 
 dev_dependencies:
   flutter_test:
